# woosh

./: AGENTS.md  Cargo.toml  ROADMAP.md  SPEC.md
.claude/: settings.json
.claude/hooks/: check-docs-updated.sh
.github/workflows/: ci.yml
docs/: IPC_DECODE_BUG.md  logging.md
src/: config.rs  lib.rs  main.rs
src/daemon/: AGENTS.md  audio.rs  eq.rs  ipc.rs  lifecycle.rs  mod.rs  mpv.rs  state.rs
src/tui/: AGENTS.md  app.rs  art.rs  client.rs  mod.rs
tests/: daemon_startup_race_test.rs  ipc_integration.rs
